force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>This is a custom address object that implements address requirements specific to the Newport Art Museum's needs.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>Address-{00000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>