force-app/main/default/objects/Address__c/fields/Active_From__c.field-meta.xml
<CustomField>
    <fullName>Active_From__c</fullName>
    <description>After this Month and Day, the seasonal address specified here is active.</description>
    <label>Active From</label>
    <length>5</length>
    <type>Text</type>
</CustomField>