force-app/main/default/objects/Address__c/fields/Active_Until__c.field-meta.xml
<CustomField>
    <fullName>Active_Until__c</fullName>
    <description>The specified seasonal address is active until the specified month and day.</description>
    <label>Active Until</label>
    <length>5</length>
    <type>Text</type>
</CustomField>