force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field stores the city associated with this address.</description>
    <label>City</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>