force-app/main/default/objects/Address__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates this address to the household that resides there, if any.</description>
    <label>Household</label>
    <referenceTo>Household__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Custom_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>