force-app/main/default/objects/Address__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field relates this address to the organization, if any, that exists at this address.</description>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Custom_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>