force-app/main/default/objects/Address__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when this address represents the primary, core address associated with this Organization or Household. This address is the default address.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>