force-app/main/default/objects/Address__c/fields/Seasonal__c.field-meta.xml
<CustomField>
    <fullName>Seasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the address is only in affect for a specific portion of the year.</description>
    <label>Seasonal</label>
    <type>Checkbox</type>
</CustomField>