force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This field captures the state associated with this address.</description>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_States</valueSetName>
    </valueSet>
</CustomField>