force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field holds the building number and street associated to this address.</description>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>