force-app/main/default/objects/Address__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Optionally, this field specifies a unit number or floor for this address.</description>
    <label>Unit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>