force-app/main/default/objects/Address__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>This field captures the zipcode associated with this address.</description>
    <label>Zipcode</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>