force-app/main/default/objects/Address__c/validationRules/Seasonal_Active_From_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Seasonal_Active_From_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Seasonal__c = TRUE, Active_From__c = "")</errorConditionFormula>
    <errorDisplayField>Active_From__c</errorDisplayField>
    <errorMessage>Make sure to enter when this seasonal address takes effect.</errorMessage>
</ValidationRule>