force-app/main/default/objects/Address__c/validationRules/Seasonal_or_Primary_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Seasonal_or_Primary_Validation</fullName>
    <active>true</active>
    <description>This</description>
    <errorConditionFormula>AND(Primary__c = TRUE, Seasonal__c = True)</errorConditionFormula>
    <errorMessage>An address cannot be both a primary address and a seasonal address.</errorMessage>
</ValidationRule>